# py-gdrive-file-mover

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: run.yml
.reuse/: dep5
py_gdrive_file_mover/: py_gdrive_file_mover.py
